--- a/src/main/resources/templates/group_info.html
+++ b/src/main/resources/templates/group_info.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    <header>
+        <style>     
+            /* Center the content */
+            body {
+              font-family: Arial, sans-serif;
+              background-color: #f4f4f4;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              min-height: 100vh;
+            }
+            
+            h1 {
+              margin-bottom: 20px;
+              font-size: 24px;
+              color: #333;
+            }
+            
+            img {
+              max-width: 100%;
+              height: auto;
+              margin-bottom: 15px;
+            }
+            
+            p {
+              font-size: 18px;
+              color: #333;
+            }
+          </style>
+        
+    </header>
     <body>
+        <h3>Scan the QR Code to find your group!</h3>
         <img th:src="${qrcodeurl}">
+        <p>Group Number: <span th:text="${groupnumber}"></span></p>
     </body>
     </html>
